manifests/service-d6e8.yml
apiVersion: v1
kind: Service
metadata:
    name: "bugbash2392020-d85e"
    labels:
        app: "bugbash2392020-d85e"
spec:
    type: ClusterIP
    ports:
    - port: 
      targetPort: 
      protocol: TCP
      name: http
    selector:
        app: "bugbash2392020-d85e"
